compiler/tests/fail/slh/x86-64/export_takes_msf.jazz
export
fn main(reg u64 y) -> reg u64 {
    reg u64 x;
    x = #mov_msf(y);
    return x;
}
